# OpenPARF-MLCAD2023

./: .gitignore  CMakeLists.txt  README.md  openparf.py
benchmarks/: CMakeLists.txt
docker/: openparf.dockerfile
openparf/: flow.py  params.py
openparf/container/: flat_nested_vector.hpp  vector_2d.hpp
openparf/database/: attr.h  database.cpp  database.h  design.cpp  design.h  model.cpp  module_inst.h  netlist.hpp  object.h  placedb.cpp  placedb.h  region.cpp  region.h  shape.cpp  shape.h
openparf/geometry/: point.hpp
openparf/io/: CMakeLists.txt
openparf/ops/: CMakeLists.txt
openparf/placement/: data_collections.py  draw_place.py  metric.py  nesterov.py  op_collections.py  placer.py
openparf/pybind/: CMakeLists.txt  database.cpp  database.h  util.cpp  util.h
openparf/util/: enums.h  macros.h  stopwatch.h  torch.h  util.h
scripts/: bmp2gif.sh  eval.py  macroplacement_bookshelf2vivado.py  mlcad2023_bookshelf2vivado.py  mlcad2023_eval.py  mlcad2023_exportIO.py  mlcad2023_one4all.sh  mlcad2023_place.sh  mlcad2023_route.py  mlcad2023_route_sample.py  mlcad2023_vivado.py  mlcad2023_vivado_autoIO.py  vivado2bookshelf-pl.py
scripts/data_correction/: cascade_macro_replenish.py  clean_reg.sh  design.scl  fix_benchmark.sh  one_pin_nets_in_design_nets.py  remedy_order.py
scripts_tcl/: cell_loc.tcl
unittest/: CMakeLists.txt
unittest/database/: CMakeLists.txt  database.cpp
unittest/regression/: CMakeLists.txt
unittest/regression/ehbookshelf/: sample1.json
unittest/regression/mlcad2023/: Design_2.json  mlcad2023.cpu.json  mlcad2023.json
(+74 files in other folders)
